<resources>
    <string name="app_name">Aureus Academy</string>
    <string name="network_error">Network Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="no_network_error">Please connect to working internet connection</string>
    <string name="text_okay">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="enter_your_email_address">Enter your email address....</string>
    <string name="password">Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="bottom_tab_home">Home</string>
    <string name="bottom_tab_schedule">Schedule</string>
    <string name="bottom_tab_make_ups">Make-Ups</string>
    <string name="bottom_tab_ticket">Tickets</string>
    <string name="bottom_tab_account">Account</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="accountdetails">Account Details</string>
    <string name="invoices">Invoices</string>
    <string name="billing_details">Billing Details</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="personal_details">Personal Details</string>
    <string name="student">Students</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="invoice">Invoices</string>
    <string name="scheduled">Scheduled</string>
    <string name="upcoming_lessons">Upcoming Lessons</string>
    <string name="enrollments">Enrollments</string>
    <string name="view">View</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="jpin_an_online_lesson">Join An Online Lesson</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="textOtpSend">Otp Send Successfully</string>
    <string name="bottom_tab_join_lession">Join Lession</string>
    <string name="booking_id">Booking Id</string>
    <string name="online_marketing_code">Online Meeting Code</string>
    <string name="name">Name</string>
    <string name="jpin_online_lesson">Join Online Lesson</string>
    <string name="teacher">Teacher</string>
    <string name="duration">Duration</string>
    <string name="lesson_type">Lesson Type</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="lesson_details">Lesson Details</string>
    <string name="join_online_studio">Join Online Studio</string>
    <string name="copyLink">Copy Link</string>
    <string name="online_lesson_details">Online Lesson Details</string>
    <string name="lesson_files">Lesson Files</string>
    <string name="online_lesson_details_description">This lesson will be held and you can join the online lesson studio by clicking the button below or sharing the meeting link and joining code with the student.</string>
    <string name="acceptedFiles">Accepted File Types: .mp4 | .mp3 | .PDF | .JPG | .PNG</string>
    <string name="student_">Student</string>
    <string name="web_app_domain">twilio-video-react.appspot.com</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="audio_device">Audio Device</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="room_screen_connection_failure_title">Connection Failure</string>
    <string name="room_screen_connection_failure_message">Failed to connect to the room.</string>
    <string name="room_screen_max_participant_failure_message">Room contains too many participants.</string>
    <string name="room_screen_token_retrieval_failure_message">Failed to retrieve the room token.</string>
    <string name="room_screen_token_expired_message">Passcode expired. Please sign in with a new passcode.</string>
    <string name="room_screen_pin_icon_description">Participant Pin</string>
    <string name="room_notification_channel_title">Video Call</string>
    <string name="room_notification_title">Ongoing video call in %s</string>
    <string name="room_notification_message">Tap to return to the room.</string>
    <string name="settings_screen_enable_stats">Enable Stats</string>
    <string name="settings_screen_enable_network_quality_level">Enable Network Quality Level</string>
    <string name="settings_screen_enable_insights">Enable Insights</string>
    <string name="settings_screen_enable_automatic_track_subscription">Enable Automatic Track Subscription</string>
    <string name="settings_screen_enable_dominant_speaker">Enable Dominant Speaker</string>
    <string name="settings_screen_record_participants_on_connect">Record Participants on Connect</string>
    <string name="settings_screen_enable_network_quality_level_description">Network Quality Level</string>
    <string name="settings_screen_environment_string">Environment</string>
    <string name="settings_screen_topology">Room Type</string>
    <string name="settings_screen_media">Media</string>
    <string name="settings_screen_video_codecs">Video Codec</string>
    <string name="settings_screen_audio_codecs">Audio Codec</string>
    <string name="settings_screen_max_video_bitrate">Video Bitrate (Kbps)</string>
    <string name="settings_screen_max_audio_bitrate">Audio Bitrate (Kbps)</string>
    <string name="settings_screen_vp8_simulcast">VP8 Simulcast</string>
    <string name="settings_screen_identity">User Identity</string>
    <string name="settings_screen_version">App Version</string>
    <string name="settings_screen_video_library_version">SDK Version</string>
    <string name="settings_screen_logout">Log Out</string>
    <string name="settings_screen_video_resolution">Video Resolution</string>
    <string-array name="settings_screen_environment_array">
        <item>Production</item>
        <item>Staging</item>
        <item>Development</item>
    </string-array>
    <string-array name="settings_screen_environment_array_values">
        <item>production</item>
        <item>stage</item>
        <item>dev</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_modes">
        <item>Server Default</item>
        <item>Collaboration</item>
        <item>Grid</item>
        <item>Presentation</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_mode_values">
        <item>Server Default</item>
        <item>COLLABORATION</item>
        <item>GRID</item>
        <item>PRESENTATION</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_dominant_speaker_priorities">
        <item>Server Default</item>
        <item>Low</item>
        <item>Standard</item>
        <item>High</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_dominant_speaker_priority_values">
        <item>Server Default</item>
        <item>LOW</item>
        <item>STANDARD</item>
        <item>HIGH</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_track_switch_modes">
        <item>Server Default</item>
        <item>Disabled</item>
        <item>Predicted</item>
        <item>Detected</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_track_switch_mode_values">
        <item>Server Default</item>
        <item>DISABLED</item>
        <item>PREDICTED</item>
        <item>DETECTED</item>
    </string-array>
    <string-array name="settings_screen_bandwidth_profile_render_dimensions">
        <item>Server Default</item>
        <item>176x144</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
        <item>1920x1080</item>
    </string-array>
    <string name="stats_enable_in_settings">Enable in Settings</string>
    <string name="enable_ice">Enable ICE Options</string>
    <string name="ice_options">Enable ICE options</string>
    <string name="client_name">Client Name</string>
    <string name="settings_title">Settings</string>
    <string name="settings_title_advanced">Advanced</string>
    <string name="settings_title_internal">Internal</string>
    <string name="settings_title_bandwidth_profile">Bandwidth Profile</string>
    <string name="settings_title_audio">Audio</string>
    <string name="username">Username</string>
    <string name="join_room">Join Room</string>
    <string name="registering">Registering</string>
    <string name="video_client_status">Video Client Status</string>
    <string name="room_status">Room Status</string>
    <string name="video_constraints">Video Constraints</string>
    <string name="statistics">Statistics</string>
    <string name="local">Local Media</string>
    <string name="remote">Remote Media</string>
    <string name="stun_turn">STUN or TURN server</string>
    <string name="add_server">Add</string>
    <string name="ice_options_button">Ice Options</string>
    <string name="prefer_h264">Prefer H264</string>
    <string name="auto_register">Automatically register when app launches</string>
    <string name="auto_accept">Accept invites automatically</string>
    <string name="use_headset">Start audio using headset</string>
    <string name="error_initializing_conversations">Error initializing conversations sdk</string>
    <string name="logout_when_conv_ends">Logout when conversation ends</string>
    <string name="room_name">Room Name</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="pause_audio">Pause audio</string>
    <string name="resume_audio">Resume audio</string>
    <string name="pause_video">Pause video</string>
    <string name="resume_video">Resume video</string>
    <string name="share_screen">Share screen</string>
    <string name="select_audio_device">Select audio device</string>
    <string name="stop_screen_share">Stop screen share</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="join">Join</string>
    <string name="room">Room</string>
    <string name="stats_track_sid">sid</string>
    <string name="stats_codec">codec</string>
    <string name="stats_packets">packets lost</string>
    <string name="stats_bytes_sent">bytes sent</string>
    <string name="stats_bytes_received">bytes received</string>
    <string name="stats_gathering_disabled">Statistics Gathering Disabled</string>
    <string name="stats_unavailable">Statistics Unavailable</string>
    <string name="stats_description_join_room">Join a Room to View Statistics</string>
    <string name="stats_description_media_not_shared">Media is Not Being Shared</string>
    <string name="stats_rtt">round trip time</string>
    <string name="sign_in_with_biometrics">Sign in With Biometrics</string>
    <string name="bring_music_to_life">Bring Music To Life</string>
    <string name="log_in">Log In</string>
</resources>