<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/bottom_tab_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/bottom_tab_schedule" />

        <item
            android:id="@+id/nav_makeup"
            android:icon="@drawable/ic_makeup"
            android:title="@string/bottom_tab_make_ups" />
        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_ticket"
            android:title="@string/bottom_tab_ticket" />

        <item
            android:id="@+id/nav_account_details"
            android:icon="@drawable/ic_person"
            android:title="@string/accountdetails" />
        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_innvoice"
            android:title="@string/invoices" />

        <item
            android:id="@+id/nav_billing_details"
            android:icon="@drawable/ic_billing"
            android:title="@string/billing_details" />
        <item
            android:id="@+id/nav_refer_friend"
            android:icon="@drawable/ic_share"
            android:title="@string/refer_a_friend" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />
    </group>

</menu>